# Tensor-Array

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Config.cmake.in  Dockerfile  README.md  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/CPU/: Dockerfile  devcontainer.json
.devcontainer/CUDA/: Dockerfile  devcontainer.json
.devcontainer/ROCm/: Dockerfile  devcontainer.json
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  codeql.yml  deploy-webpages.yml  deploy_webpages.yml  docker-image.yml  docker-publish-d.yml  docker-publish.yml  mirror-to-gitlab.yml  msvc.yml
Dockerfolder/: CUDA-12.9.1-Ubuntu-20.04.Dockerfile  CUDA-12.9.1-ubi8.Dockerfile  Ubuntu.Dockerfile
cmake/: ta_add_doxygen.cmake  ta_core_config.cmake  ta_core_tests.cmake  ta_interp_config.cmake  ta_layers_config.cmake
scripts/actions/: install-cuda-rhel.sh  install-cuda-ubuntu.sh  install-cuda-windows.ps1  install-cuda-windows.sh  install-rocm-ubuntu.sh
scripts/cmake/gpu-compiler/: add-cuda-nvcc.cmake  add-rocm-hip.cmake
scripts/packages-install/: reinstall-cmake-rhel.sh
src/: CMakeLists.txt  convolution.cc  convolution.hh  layer_holder.hh  linear.hh  main.cpp  recurrent.cc  transformer.cc  transformer.hh
src/Tensor-Array/: CMakeLists.txt
src/Tensor-Array/core/: CMakeLists.txt  data_type_wrapper.cc  data_type_wrapper.cu  data_type_wrapper.hh  devices.cu  devices.hh  extern_type_map.cc  extern_type_map.hh  tensor.cc  tensor.cu  tensor.hh  tensor_blas.cu  tensor_convolution.cc  tensor_convolution.cu  tensorarray.hh  tensorbase.cc  tensorbase.hh
src/Tensor-Array/layers/: CMakeLists.txt  attention.cc  attention.hh  convolution.cc  convolution.hh  layer_holder.hh  layer_impl.cc  layer_impl.hh  layer_utility.cc  layer_utility.hh  linear.cc  linear.hh  normalization.cc  normalization.hh  recurrent.cc  recurrent.hh  sequential.cc  sequential.hh  transformer.cc  transformer.hh
src/core/: data_type_wrapper.hh  tensor.cc  tensor.hh  tensor_convolution.cc  tensor_convolution.cu  tensorbase.cc
src/tensor-array/core/: CMakeLists.txt  data_type_wrapper.cc  devices.hh  extern_type_map.hh  initializer_wrapper.hh  tensor.cc  tensor.cu  tensor.hh  tensor_blas.cc  tensor_cast.cu  tensor_convolution.cc  tensor_convolution.cu  tensor_math_func.cu  tensor_math_op.cu  tensor_math_op.hh  tensor_reduce.cu  tensorbase.cc  tensorbase.hh
src/tensor-array/interp/: CMakeLists.txt  glob_stack.cc  glob_stack.h  main.c  open_file.c  open_file.h  option.c  option.h  parser.c  parser.h  sym_map.cc  sym_map.h  token.c  token.h  vm.c  vm.h  vm_instruction.h  vm_type.h  vmop.cc  vmop.h
src/tensor-array/layers/: CMakeLists.txt  attention.cc  attention.hh  convolution.hh  layer_any.cc  layer_any.hh  layer_holder.hh  layer_impl.hh  layer_utility.hh  linear.cc  linear.hh  normalization.cc  normalization.hh  recurrent.hh  sequential.cc  sequential.hh  transformer.hh
src/tensor_array/core/: CMakeLists.txt  devices.cc  devices.cu  devices.hh  initializer_wrapper.hh  tensor.cc  tensor.cu  tensor.hh  tensor_blas.cu  tensor_cast.cu  tensor_reduce.cu
src/tensor_array/layers/: CMakeLists.txt  attention.cc  attention.hh  convolution.cc  layer_impl.cc  layer_impl.hh  layer_utility.cc  linear.cc  linear.hh  normalization.cc  normalization.hh  transformer.hh
tests/tensor-array/core/: CMakeLists.txt  gradient.cc  print_output.cc  tensor_array.cc  tensor_array_test.cc  tensor_matmul_transpose.cc  tensor_operators.cc
tests/tensor-array/core/cmake/: ta_core_tests.cmake
